# CHIP8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  memory.txt
src/: CHIP8.h  CHIP8.hpp  main.cpp
